--- a/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
+++ b/src/LoopBack.Sdk.Xamarin/LoopBack.Sdk.Xamarin.csproj
@@ -39,7 +39,7 @@
     <Compile Include="Loopback\ContainerRepository.cs" />
     <Compile Include="Loopback\File.cs" />
     <Compile Include="Loopback\FileRepository.cs" />
-    <Compile Include="Common\ISharedReferencesService.cs" />
+    <Compile Include="Shared\ISharedReferencesService.cs" />
     <Compile Include="Loopback\LocalInstallation.cs" />
     <Compile Include="Loopback\RestAdapter.cs" />
     <Compile Include="Loopback\RestRepository.cs" />
@@ -54,7 +54,7 @@
     <Compile Include="Remoting\Adapters\RestContext.cs" />
     <Compile Include="Remoting\Adapters\RestContract.cs" />
     <Compile Include="Remoting\Adapters\RestContractItem.cs" />
-    <Compile Include="Common\IContext.cs" />
+    <Compile Include="Shared\IContext.cs" />
     <Compile Include="Remoting\Adapters\StreamParam.cs" />
     <Compile Include="Remoting\IRemoteRepository.cs" />
     <Compile Include="Remoting\RemoteRepository.cs" />
